# agentic-enterprise-certification

./: .gitignore  CERTIFICATION-OVERVIEW.md
cert/: BETA-READINESS-TODO.md  Exam-Blueprint-Agentic-Enterprise.md  JTA-Agentic-Enterprise.md  MCH010 - Blueprint to Caveon_FINAL for Workshop.xlsx  MCH010 - Job Role and MQC.xlsx  PHASE-B-COMPLETE.md  PSYCHOMETRIC-ANALYSIS.md
cert-engine/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cert-engine/app/: config.py  database.py  main.py
cert-engine/app/irt/: __init__.py  estimation.py  models.py  sprt.py
cert-engine/app/models/: __init__.py  admin.py  candidate.py  exam_session.py  item.py
cert-engine/app/routers/: exam.py  health.py  items.py
cert-engine/app/schemas/: admin.py  exam.py  item.py
cert-engine/app/services/: cat_engine.py  item_selection.py  stopping_rule.py
cert-engine/data/: seed_items.yaml
cert-engine/docs/: DESIGN.md  DEVELOPMENT.md  OPERATIONS.md
cert-engine/scripts/: simulate_cat.py
cert-engine/tests/: conftest.py
cert-engine/tests/test_irt/: test_2pl.py  test_estimation.py  test_sprt.py
cert-engine/tests/test_services/: test_cat_engine.py
exercise-guide/: 01-salesforce-org-setup.md  02-slack-workspace.md  03-aws-bedrock-ai-gateway.md  04-process-layer-orchestrator.md  05-system-apis.md  06-deployment-end-to-end.md  README.md
setup/: README.md  catchup.py  requirements.txt  student.demo.json  student.template.json
slide-deck/: 01-why-agentic.md  02-salesforce-backbone.md  03-slack-experience-layer.md  04-ai-gateway-bedrock.md  05-process-layer-orchestrator.md  (+3 more)
(+15 files in other folders)
